--- a/contact.html
+++ b/contact.html
@@ -30,36 +30,49 @@
 		<div class="container">
 			<h1><a href="index.html">Fira Mardiani</a></h1>
 			<ul>
-				<li class="active"><a href="index.html">HOME</a></li>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">Sejarah</a></li>
 				<li><a href="service.html">Visi dan Misi</a></li>
-				<li><a href="contact.html">CONTACT</a></li>
+				<li class="active"><a href="contact.html">CONTACT</a></li>
 				<li><a href="aboutus.html">About Me</a></li>
 			</ul>
 		</div>
 	</header>
 
-	<!--banner-->
-	<section class="banner">
-		<h2>WELLCOME TO MY WEBSITE</h2>
-	</section>
-
-	<!--about-->
-	<section class="about">
+		<!--label-->
+	<section class="label">
 		<div class="container">
-			<h3>Fira Mardiani</h3>
-			<p>Ujian Tengah semester</p>
-			<p>Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak</p>
-			<p>Tahun ajaran 2021 / 2022</p>
-			<p>Mata Kuliah : Komputer V</p>
-			<p>Kelas  : 3A2</p>
-			<p>Program Studi : S1 Manajemen</p>
+			<p>Home / Contact</p>
 		</div>
 	</section>
+
+	<!--service-->
+	<section class="service">
+		<div class="container">
+			<h3>CONTACT INFO</h3>
+			<div class="box">
+				<div class="col-4">
+					<h4>Address</h4>
+					<p>Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak :</p>
+				</div>
+				<div class="col-4">
+					<h4>Email</h4>
+					<p>admin@stieip.ac.id</p>
+				</div>
+				<div class="col-4">
+					<h4>Telepon</h4>
+					<p>(0561) 734762</p>
+				</div>
+				<div class="col-4">
+					<h4>Instagram</h4>
+					<p>@stieindonesia_pontianak</p>
+				</div>
+	</section>
+
 	<!--footer-->
 	<footer>
 		<div class="container">
-			<small>Copyright &copy; 2022 - Fira Mardiani</small>
+			<small>Copyright &copy; 2021 -  Fira Mardiani</small>
 		</div>
 	</footer>
 
