--- a/aboutus.html
+++ b/aboutus.html
@@ -30,32 +30,38 @@
 		<div class="container">
 			<h1><a href="index.html">Fira Mardiani</a></h1>
 			<ul>
-				<li class="active"><a href="index.html">HOME</a></li>
-				<li><a href="about.html">Sejarah</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li class="active"><a href="about.html">Sejarah</a></li>
 				<li><a href="service.html">Visi dan Misi</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
-				<li><a href="aboutus.html">About Me</a></li>
+				<li class="active"><a href="aboutus.html">About Me</a></li>
 			</ul>
 		</div>
 	</header>
 
-	<!--banner-->
-	<section class="banner">
-		<h2>WELLCOME TO MY WEBSITE</h2>
+	<!--label-->
+	<section class="label">
+		<div class="container">
+			<p>Home / About Me</p>
+		</div>
 	</section>
 
 	<!--about-->
 	<section class="about">
 		<div class="container">
-			<h3>Fira Mardiani</h3>
-			<p>Ujian Tengah semester</p>
-			<p>Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak</p>
-			<p>Tahun ajaran 2021 / 2022</p>
-			<p>Mata Kuliah : Komputer V</p>
-			<p>Kelas  : 3A2</p>
-			<p>Program Studi : S1 Manajemen</p>
+			<img src="img/fira.jpeg" width="35%">
+			<h3>About Me</h3>
+			<p>Nama saya Fira Mardiani. Saya lahir di Sengkubang, 29 Maret 2001 . Saya tinggal di Jl. Dr Rubini Gang Sepakat No. 40, Mempawah, Kalimantan Barat. Jenis kelamin saya Perempuan. Saya beragama Islam.</p>
+			<p>Pekerjaan saya saat ini adalah Sebagai Mahasiswa di Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak ( STIE Indonesia Pontianak ) dengan program studi S1 Manajemen. </p>
+			<p>Saya anak pertama dari tiga bersaudara. Ayah saya bernama Tomi dan ibu saya bernama Arningsih. </p>
+			<h3>Riwayat pendidikan :</h3>
+			<p>- SD Negeri 21 Mempawah Hilir ( Dari Tahun 2007 - Tahun 2013 ) </p>
+			<p>- SMP Negeri 2 Mempawah Hilir ( Dari Tahun 2013 - Tahun 2016 )</p>
+			<p>- SMA Negeri 2 Mempawah Hilir ( Dari Tahun 2016 - 2019 )</p>
+			<p>- Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak ( Dari Tahun 2019 - Sekarang )</p>
 		</div>
 	</section>
+
 	<!--footer-->
 	<footer>
 		<div class="container">
