--- a/service.html
+++ b/service.html
@@ -30,39 +30,44 @@
 		<div class="container">
 			<h1><a href="index.html">Fira Mardiani</a></h1>
 			<ul>
-				<li class="active"><a href="index.html">HOME</a></li>
+				<li><a href="index.html">HOME</a></li>
 				<li><a href="about.html">Sejarah</a></li>
-				<li><a href="service.html">Visi dan Misi</a></li>
+				<li class="active"><a href="service.html">Visi dan Misi</a></li>
 				<li><a href="contact.html">CONTACT</a></li>
 				<li><a href="aboutus.html">About Me</a></li>
 			</ul>
 		</div>
 	</header>
 
-	<!--banner-->
-	<section class="banner">
-		<h2>WELLCOME TO MY WEBSITE</h2>
-	</section>
-
-	<!--about-->
-	<section class="about">
+		<!--label-->
+	<section class="label">
 		<div class="container">
-			<h3>Fira Mardiani</h3>
-			<p>Ujian Tengah semester</p>
-			<p>Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak</p>
-			<p>Tahun ajaran 2021 / 2022</p>
-			<p>Mata Kuliah : Komputer V</p>
-			<p>Kelas  : 3A2</p>
-			<p>Program Studi : S1 Manajemen</p>
+			<p>Home / Visi dan Misi</p>
 		</div>
 	</section>
+
+	<!--service-->
+	<section class="service">
+		<div class="container">
+			<h3>Visi dan Misi</h3>
+			<h3>Visi Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak :</h3>
+			<p>“Menjadikan STIE Indonesia Pontianak sebagai Sekolah Tinggi yang menghasilkan sumber daya manusia di bidang manajemen dan akuntansi yang unggul, mandiri, dan berbudaya multikultural di Indonesia.”</p>
+			<h3>Misi Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak :</h3>
+			<p>1. Menyelenggarakan proses pembelajaran yang berkualitas.</p>
+			<p>2. Meningkatkan produktivitas tenaga pendidik di bidang Tridharma Perguruan Tinggi.</p>
+			<p>3. Meningkatkan kualifikasi dan kompetensi tenaga pendidik dan tenaga kependidikan.</p>
+			<p>4. Mengembangkan kemitraan dengan berbagai pihak untuk penerapan dan pengembangan Ilmu Akuntansi dan Manajemen.</p>
+			<h3>Tujuan Sekolah Tinggi Ilmu Ekonomi Indonesia Pontianak :</h3>
+			<p>1. Menghasilkan Sarjana Manajemen yang berjiwa-wirausaha dan mampu menerapkan prinsip-prinsip manajemen untuk meningkatkan kinerja organisasi baik organisasi bisnis maupun nonbisnis.</p>
+			<p>2. Menghasilkan publikasi ilmiah melalui penelitian yang berkualitas dan inovatif untuk menunjang pembangunan nasional.</p>
+			<p>3. Membangun kerjasama yang berkelanjutan dengan masyarakat, sektor swasta, pemerintah dan lembaga-lembaga internasional dalam pengembangan iptek.</p>
+			</div>
 	<!--footer-->
 	<footer>
 		<div class="container">
-			<small>Copyright &copy; 2022 - Fira Mardiani</small>
+			<small>Copyright &copy; 2021 -  Fira Mardiani</small>
 		</div>
 	</footer>
-
 
 	<script type="text/javascript">
 		$(document).ready(function(){
